--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>My app</title>
+	<script type="text/javascript" src="app.js"></script>
 </head>
 <body>
 <h1>Hello World!!</h1>
